background & alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,6 @@ code {
 
 
 .App{
-  height: 100vh;
-  width: 100vw;
   background-image: url('./images/clean-bnb-background-image.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
