--- a/src/sass/_sticky-footer.scss
+++ b/src/sass/_sticky-footer.scss
@@ -1,5 +1,5 @@
 html, body {
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
@@ -9,5 +9,9 @@ body {
 }
 
 main {
-    flex: 1;
+    flex: 1 0 auto;
+}
+
+.footer {
+  flex-shrink: 0;
 }
